# estate-scout

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_catalog_items.py  0003_market_price_tables.py  0004_archive_schema.py  0005_listing_lots.py  0006_listing_lots_unique.py
backend/app/: config.py  database.py  dependencies.py  main.py  scheduler.py
backend/app/models/: __init__.py  alert.py  catalog_item.py  embedding_cache.py  item_fingerprint.py  listing.py  listing_lot.py  market_price_index.py  platform.py  price_snapshot.py  saved_search.py  sponsored_placement.py  user.py  valuation_cache.py
backend/app/routers/: admin.py  alerts.py  auth.py  billing.py  catalog.py  health.py  listings.py  market.py  price_check.py  saved_searches.py  search.py  sponsored.py  valuation.py
backend/app/schemas/: catalog.py  listing.py  market.py  price_check.py  user.py  valuation.py
backend/app/services/: ai_price_service.py  alert_service.py  cache_service.py  embedding_service.py  item_fingerprint_service.py  market_index_service.py  price_history_service.py  search_service.py  valuation_service.py
backend/scrapers/: base.py  enricher.py  geocoder.py  hydrate.py  proxy_pool.py  rate_limiter.py  run.py  storage.py
backend/scrapers/discovery_outputs/: last_run_summary.json  new_sites_task_queue.json  new_sites_task_queue.md  seen_sites.json
backend/scripts/: init_db.sql
backend/workers/: ai_curate.py  discovery_daily.py
(+181 files in other folders)
